src/objects/Content_Delivery__c/Content_Delivery__c.object-meta.xml
<CustomObject>
    <label>Related Library Resource</label>
    <nameField>
        <displayFormat>CD-{000}</displayFormat>
        <label>Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Library Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>