src/objects/Content_Delivery__c/fields/Content_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Name__c</fullName>
    <label>Content Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>