src/objects/Content_Delivery__c/fields/ID_Value__c.field-meta.xml
<CustomField>
    <fullName>ID_Value__c</fullName>
    <label>ID Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>